Closes #7566 - Fixed scrolling to only apply to the area below the Inspector tabs. - Removed unneeded padding in pane.scss. - Alignment fixes to related scroll elements in tree.

--- a/src/ui/layout/pane.scss
+++ b/src/ui/layout/pane.scss
@@ -18,9 +18,6 @@
 
   &--vertical {
     height: 100%;
-    > .l-pane .l-pane__contents {
-      padding-right: $interiorMarginSm; // Fend off scrollbar
-    }
   }
 }
 
@@ -195,7 +192,7 @@
       }
     }
 
-    &[class*='--collapsed'] { // For Recent Objects Button  
+    &[class*='--collapsed'] { // For Recent Objects Button
       &.collapse-horizontal {
         [class*='expand-button'] {
           display: block;
@@ -326,7 +323,7 @@
       }
 
       /************************** Vertical Splitter Before */
-      // Pane collapses downward. Used by Recent Objects in Tree 
+      // Pane collapses downward. Used by Recent Objects in Tree
       &[class*='-before'] {
         $m: $interiorMarginLg;
         margin-top: $m;
